# NBT-Magic

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  editor_window.cpp  editor_window.hpp  info.hpp.in  main.cpp  tag_model.cpp  tag_model.hpp
nbt/: binary.cpp  binary.hpp  io.cpp  io.hpp  tag.hpp
